--- a/public_html/portal/static/css/partials/icons.scss
+++ b/public_html/portal/static/css/partials/icons.scss
@@ -691,3 +691,21 @@
 	background: url(../svg/icons/xlsx.png);
 	background-size: 100% 100%;
 }
+
+.icoup {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/up.svg);
+	background-size: 100% 100%;
+}
+
+.icodown {
+	display: block;
+	width: 16px;
+	height: 16px;
+	margin: 0 auto;
+	background: url(../svg/icons/down.svg);
+	background-size: 100% 100%;
+}
