--- a/public_html/portal/static/css/partials/inputs.scss
+++ b/public_html/portal/static/css/partials/inputs.scss
@@ -11,7 +11,7 @@ label {
 		padding-left: 10px;
 	}
 
-	input[type="text"], input[type="password"], input[type="email"], span.ui-selectmenu-button, .autocomplete, textarea {
+	input[type="number"],input[type="button"],input[type="text"], input[type="password"], input[type="email"], span.ui-selectmenu-button, .autocomplete, textarea {
 		background: #e2e2e2;
 		outline: 1px solid #b7b7b7;
 		outline-offset: 1px;
